--- a/src/components/StokeMeter.css
+++ b/src/components/StokeMeter.css
@@ -16,6 +16,6 @@
 }
 
 .stoke-meter {
-  margin-bottom: 0px;
-  margin-top: 0;
+  margin-bottom: 4px;
+  margin-top: 4px;
 }
